made a couple corrections to html.index

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <header>
             <div id="page-head">
                 <div class="floating-head">
-                    <img id="logo" src="python.png">
+                    <img id="logo" src="python.png" alt="logo">
                 </div>
                 <div class="floating-head" id="page-head-container">
                     <div id="text-adjust"><p>Text Size:<a href="#">Normal</a><span>|</span><a href="#">Large</a></p></div>
                     <div id="search-bar">
                         <input type="text" name="search" placeholder="Search..">
-                        <button onclick="#">GO</button>
+                        <button on-click="#">GO</button>
                     </div>
                 </div>
             </div>
